snippets/Nemerle.Statechart/Tests/testsuite/negative/timed_event_duplicate_unit.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  name "timed event duplicate unit";
  
  state A
  {
    a => B;
  }
  
  state B
  {
    after (1 h 2 hours 5 min) => A; // E: Parse Error: Duplicate unit "hours" used in timed event
  }
   
  #>)]
  public class example
  {
  }

